bdr.BDR.scala.error
Erreur de compilation :
BDR:7: error: type mismatch;
 found   : String
 required: Boolean
    if (litMessage():String ){
                    ^BDR:9: error: type mismatch;
 found   : String
 required: Boolean
    } else if (litMessage():String) {
                           ^