bdr.BDR.scala.code
var fini = false


  
  if (estSurMessage():Boolean) {
    
    if (litMessage():String ){
      avance()
    } else if (litMessage():String) {
      recule()
    }
    
   
  }
